Update icon for clear days

--- a/forecastio/weather_icon.html
+++ b/forecastio/weather_icon.html
@@ -1,11 +1,11 @@
 <div class='wi-container' ng-switch="icon">
     <div ng-switch-when="clear" ng-switch="timeOfDay">
         <i ng-switch-when="night" class="wi wi-night-clear"></i>
-        <i ng-switch-when="day" class="wi wi-day-clear"></i>
-        <i ng-switch-default class="wi wi-clear"></i>
+        <i ng-switch-when="day" class="wi wi-wu-clear"></i>
+        <i ng-switch-default class="wi wi-wu-clear"></i>
     </div>
     <div ng-switch-when="clear-day">
-        <i class="wi wi-day-clear"></i>
+        <i class="wi wi-wu-clear"></i>
     </div>
     <div ng-switch-when="clear-night">
         <i class="wi wi-night-clear"></i>
