Capitalize reasons sober (looks more uniform)

--- a/reasonSober/reasonSober.html
+++ b/reasonSober/reasonSober.html
@@ -1,6 +1,6 @@
 <div class="reasons-sober">
   <h3>Reasons for being sober:</h3>
   <div class="reason-sober" ng-repeat="reason in reasons">
-    <span>{{reason.reasonSober}}</span>
+    <span>{{reason.reasonSober | capitalize}}</span>
   </div>
 </div>
