Add stay fresh, only show 3 reasons, fix scrollbar

--- a/reasonSober/reasonSober.html
+++ b/reasonSober/reasonSober.html
@@ -1,5 +1,5 @@
 <div class="reasons-sober">
-  <h3>Reasons For Being Sober</h3>
+  <h3>Reasons For Being Sober:</h3>
   <div class="reason-sober" ng-repeat="reason in reasons">
     <span>{{reason.reasonSober | capitalize}}</span>
   </div>
